--- a/displaytabs/GovernmentUI-MainTemplate.html
+++ b/displaytabs/GovernmentUI-MainTemplate.html
@@ -107,7 +107,8 @@
                                     <div class="box-header with-border">
                                         <h3 class="box-title">Building Permit</h3>
                                         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
-                                            <button type="button" class="btn btn-default pull-right RealEstateBuildingPermitUI_btnNewRealEstate"><i
+                                            <button type="button" class="btn btn-info btnSaveRealEstateBuildingPermit">Save Building Permit</button>
+                                            <button type="button" class="btn btn-default RealEstateBuildingPermitUI_btnNewRealEstate"><i
                                                     class="fa fa-plus"></i> New Building Permit</button>
                                         </div>
                                     </div>
@@ -135,6 +136,9 @@
                                                     <a href="#BuildingPermitBox6" data-toggle="tab" aria-expanded="true">Box 6 (Architect/Civil/Applicant/Owner)</a>
                                                 </li>
                                                 <li class="tab-pane">
+                                                    <a href="#BuildingPermitPayment" data-toggle="tab" aria-expanded="true">Payment</a>
+                                                </li>
+                                                <li class="tab-pane">
                                                     <a href="#BuildingPermitBoxAttachment" data-toggle="tab" aria-expanded="true">Attachment</a>
                                                 </li>
                                             </ul>
@@ -156,6 +160,9 @@
                                                 </div>
                                                 <div class="tab-pane" id="BuildingPermitBox6">
                                                     <div class="DisplayTab" tabName="RealEstateBuildingPermit" tabUrl="RealEstateBuildingPermitProfileBox6"></div>
+                                                </div>
+                                                <div class="tab-pane" id="BuildingPermitPayment">
+                                                    <div class="DisplayTab" tabName="RealEstateBuildingPermit" tabUrl="RealEstateBuildingPermitProfilePayment"></div>
                                                 </div>
                                                 <div class="tab-pane" id="BuildingPermitBoxAttachment">
                                                     <div class="DisplayTab" tabName="RealEstateBuildingPermit" tabUrl="RealEstateBuildingPermitProfileBoxAttachment"></div>
@@ -182,7 +189,8 @@
                                     <div class="box-header with-border">
                                         <h3 class="box-title">Electrical Permit</h3>
                                         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
-                                            <button type="button" class="btn btn-default pull-right RealEstateElectricalPermitUI_btnNewRealEstate"><i
+                                            <button type="button" class="btn btn-info btnSaveRealEstateElectricalPermit">Save Electrical Permit</button>
+                                            <button type="button" class="btn btn-default RealEstateElectricalPermitUI_btnNewRealEstate"><i
                                                     class="fa fa-plus"></i> New Electrical Permit</button>
                                         </div>
                                     </div>
@@ -204,6 +212,9 @@
                                                     <a href="#ElectricalPermitBox4" data-toggle="tab" aria-expanded="true">Box 4 (Processing and Evaluation Division)</a>
                                                 </li>
                                                 <li class="tab-pane">
+                                                    <a href="#ElectricalPermitPayment" data-toggle="tab" aria-expanded="true">Payment</a>
+                                                </li>
+                                                <li class="tab-pane">
                                                     <a href="#ElectricalPermitBoxAttachment" data-toggle="tab" aria-expanded="true">Attachment</a>
                                                 </li>
                                             </ul>
@@ -219,6 +230,9 @@
                                                 </div>
                                                 <div class="tab-pane" id="ElectricalPermitBox4">
                                                     <div class="DisplayTab" tabName="RealEstateElectricalPermit" tabUrl="RealEstateElectricalPermitProfileBox4"></div>
+                                                </div>
+                                                <div class="tab-pane" id="ElectricalPermitPayment">
+                                                    <div class="DisplayTab" tabName="RealEstateElectricalPermit" tabUrl="RealEstateElectricalPermitProfilePayment"></div>
                                                 </div>
                                                 <div class="tab-pane" id="ElectricalPermitBoxAttachment">
                                                     <div class="DisplayTab" tabName="RealEstateElectricalPermit" tabUrl="RealEstateElectricalPermitProfileBoxAttachment"></div>
@@ -245,7 +259,8 @@
                                     <div class="box-header with-border">
                                         <h3 class="box-title">Plumbing Permit</h3>
                                         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
-                                            <button type="button" class="btn btn-default pull-right RealEstatePlumbingPermitUI_btnNewRealEstate"><i
+                                            <button type="button" class="btn btn-info btnSaveRealEstatePlumbingPermit">Save Plumbing Permit</button>
+                                            <button type="button" class="btn btn-default RealEstatePlumbingPermitUI_btnNewRealEstate"><i
                                                     class="fa fa-plus"></i> New Plumbing Permit</button>
                                         </div>
                                     </div>
@@ -267,6 +282,9 @@
                                                     <a href="#PlumbingPermitBox4" data-toggle="tab" aria-expanded="true">Box 4 (Processing and Evaluation Division)</a>
                                                 </li>
                                                 <li class="tab-pane">
+                                                    <a href="#PlumbingPermitPayment" data-toggle="tab" aria-expanded="true">Payment</a>
+                                                </li>
+                                                <li class="tab-pane">
                                                     <a href="#PlumbingPermitBoxAttachment" data-toggle="tab" aria-expanded="true">Attachment</a>
                                                 </li>
                                             </ul>
@@ -282,6 +300,9 @@
                                                 </div>
                                                 <div class="tab-pane" id="PlumbingPermitBox4">
                                                     <div class="DisplayTab" tabName="RealEstatePlumbingPermit" tabUrl="RealEstatePlumbingPermitProfileBox4"></div>
+                                                </div>
+                                                <div class="tab-pane" id="PlumbingPermitPayment">
+                                                    <div class="DisplayTab" tabName="RealEstatePlumbingPermit" tabUrl="RealEstatePlumbingPermitProfilePayment"></div>
                                                 </div>
                                                 <div class="tab-pane" id="PlumbingPermitBoxAttachment">
                                                     <div class="DisplayTab" tabName="RealEstatePlumbingPermit" tabUrl="RealEstatePlumbingPermitProfileBoxAttachment"></div>
