--- a/displaytabs/tabs/common/RealEstateTaxProfile.html
+++ b/displaytabs/tabs/common/RealEstateTaxProfile.html
@@ -4,7 +4,8 @@
     <div class="box-header with-border">
         <h3 class="box-title">Real Estate Tax</h3>
         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
-            <button type="button" class="btn btn-default pull-right RealEstateTaxUI_btnNewRealEstate"><i
+            <button type="button" class="btn btn-info btnSaveRealEstateTax">Save Real Estate Tax</button>
+            <button type="button" class="btn btn-default RealEstateTaxUI_btnNewRealEstate"><i
                     class="fa fa-plus"></i> New Property Tax</button>
         </div>
     </div>
