--- a/sample.html
+++ b/sample.html
@@ -1,19 +1,2 @@
-public Boolean ;
-public Boolean ;
-public Boolean ;
-public String ;
-
-public String ;
-public LocalDate ;
-public String ;
-public LocalDate ;
-
-public String ;
-public LocalDate ;
-public String ;
-public LocalDate ;
-
-public String ;
-public String ;
-public String ;
-public LocalDate ;
+public String invoiceNumber;
+public LocalDate invoiceDate;
