--- a/displaytabs/AccountingUI-MainTemplate.html
+++ b/displaytabs/AccountingUI-MainTemplate.html
@@ -73,12 +73,57 @@
                         </pre>
                     </div>
                     <div class="tab-pane" id="Expenses">
-                        <pre>
+                        <pre style="display: none;">
                             Expenses
                             <a href="https://youtu.be/mwuRKQadjHc" target="_blank">Video</a>                            
                             Suppliers
                             <a href="https://youtu.be/6KIl7TGN-ak" target="_blank">Video</a>                            
                         </pre>
+                        <div style="display: flex; background: #ecf0f5;">
+                            <div style="flex: 75%; margin: 15px 0px;">
+                                <div class="box box-warning">
+                                    <div class="box-header with-border">
+                                        <h3 class="box-title">Expenses</h3>
+                                        <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
+                                            <button type="button" class="btn btn-info btnSaveExpense">Save Expense</button>
+                                            <button type="button" class="btn btn-default ExpenseUI_btnNewExpense"><i
+                                                    class="fa fa-plus"></i> New Expense</button>
+                                        </div>
+                                    </div>
+                                    <!-- /.box-header -->
+                                    <div class="box-body">
+                                        <div class="DisplayTab" tabName="Expense" tabUrl="ExpenseProfileMain"></div>
+                                        <div class="nav-tabs-custom" style="margin-top: 5px;">
+                                            <ul class="nav nav-tabs">
+                                                <li class="tab-pane active">
+                                                    <a href="#ExpenseCategoryItems" data-toggle="tab" aria-expanded="false">Expense Category</a>
+                                                </li>
+                                                <li class="tab-pane">
+                                                    <a href="#ExpenseItems" data-toggle="tab" aria-expanded="true">Items</a>
+                                                </li>
+                                                <li class="tab-pane">
+                                                    <a href="#ExpenseReport" data-toggle="tab" aria-expanded="true">Report</a>
+                                                </li>
+                                            </ul>
+                                            <div class="tab-content no-padding">
+                                                <div class="tab-pane active" id="ExpenseCategoryItems">
+                                                    <div class="DisplayTab" tabName="Expense" tabUrl="ExpenseCategoryItems"></div>
+                                                </div>
+                                                <div class="tab-pane" id="ExpenseItems">
+                                                    <div class="DisplayTab" tabName="Expense" tabUrl="ExpenseItems"></div>
+                                                </div>
+                                                <div class="tab-pane" id="ExpenseReport">
+                                                    <div class="DisplayTab" tabName="Expense" tabUrl="ExpenseReport"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTabCommon" tabName="Expense" tabUrl="SearchExpense"></div>
+                            </div>
+                        </div>
                     </div>
                     <div class="tab-pane" id="Employees">
                     </div>
@@ -99,7 +144,7 @@
                             <div style="flex: 75%; margin: 15px 0px;">
                                 <div class="box box-warning">
                                     <div class="box-header with-border">
-                                        <h3 class="box-title">Account Chart</h3>
+                                        <h3 class="box-title">Chart of Accounts</h3>
                                     </div>
                                     <!-- /.box-header -->
                                     <div class="box-body">
