--- a/displaytabs/tabs/AccountingUI/ExpenseProfileMain.html
+++ b/displaytabs/tabs/AccountingUI/ExpenseProfileMain.html
@@ -15,7 +15,7 @@
         <input type="text" rowIndex="0" class="form-control editExpense" module="ExpenseUI"
             name="payeeType" tabName="_TABNAME_" disabled>
     </div>
-    <div class="form-group" style="flex: 1; margin-left: 15px;">
+    <div class="form-group" style="flex: 2; margin-left: 15px;">
         <label>Account</label>
         <div class="input-group" style="width: 100%;">
             <input rowIndex="0" type="text" class="form-control autocomplete" name="paymentAccountCode" placeholder="Account" module="ExpenseUI" mainmodule="ExpenseUI" autoname="paymentAccountCode" helptitle="paymentAccountCode">
@@ -37,7 +37,7 @@
     <div class="form-group" style="flex: 1; margin-left: 15px;">
         <label>Total Amount</label>
         <input type="text" rowIndex="0" class="form-control editExpense" module="ExpenseUI"
-            name="totalAmount" tabName="_TABNAME_">
+            name="totalAmount" tabName="_TABNAME_" disabled="">
     </div>
 </div>
 <div style="display: flex; flex: 100%;">
