--- a/sample.html
+++ b/sample.html
@@ -1,25 +1,17 @@
-<div style="display: flex;" class="ExpenseCategoryRecord">
-    <div style="flex: 4; margin-left: 10px;">
-        <div class="input-group" style="width: 100%;">
-            <input rowIndex="10" type="text" class="form-control autocomplete" name="productCode" placeholder="Procduct/Service" module="ExpenseItemUI" mainmodule="ExpenseItemUI" autoname="productCode" helptitle="productCode">
-            <input rowIndex="10" class="form-control editExpense HiddenAutoComplete" name="productCode" type="hidden" module="ExpenseItemUI" mainmodule="ExpenseItemUI" autoNameField="productCode" value="">
-            <div class="autocomplete-items" rowIndex="10" module="ExpenseItemUI" mainmodule="ExpenseItemUI" autoname="productCode">
-            </div>
-        </div>
-    </div>
-    <div style="flex: 8; margin-left: 10px;">
-        <input rowIndex="10" name="description" module="ExpenseItemUI" type="text" class="form-control editExpense" placeholder="Description">
-    </div>
-    <div style="flex: 2; margin-left: 10px;">
-        <input rowIndex="10" name="quantity" module="ExpenseItemUI" type="text" class="form-control editExpense" placeholder="Quantity">
-    </div>
-    <div style="flex: 2; margin-left: 10px;">
-        <input rowIndex="10" name="unitPrice" module="ExpenseItemUI" type="text" class="form-control editExpense" placeholder="Unit Price">
-    </div>
-    <div style="flex: 3; margin-left: 10px;">
-        <input rowIndex="10" name="totalAmount" module="ExpenseItemUI" type="text" class="form-control editExpense" placeholder="Amount">
-    </div>
-    <div class="text-center" style="flex: 1; margin-left: 10px; margin-top: 2px;">
-        <i class="fa fa-trash hand" class="btnExpenseItem" rowIndex="10"> </i>
-    </div>
-</div>
+public String bankCode;
+public String bankName;
+public String countryCode;
+public String currencyCode;
+
+
+public String bankCode;
+public String bankAccountNumber;
+
+public String corporateId;
+public String userId;
+public String password;
+
+public LocalDate syncDate;
+public Double bankBalance;
+
+public String memo;
