--- a/home.html
+++ b/home.html
@@ -385,6 +385,7 @@
   <script src="js/modules/submodules/SupplierUI.js"></script>
   <script src="js/modules/submodules/AccountChartUI.js"></script>
   <script src="js/modules/submodules/ExpenseUI.js"></script>
+  <script src="js/modules/submodules/BankingUI.js"></script>
   <script src="js/modules/submodules/ProductRequestUI.js"></script>
   <script src="js/modules/submodules/RealEstateUI.js"></script>
   <script src="js/modules/submodules/CitizenUI.js"></script>
