In Progress - Accounting 360

--- a/home.html
+++ b/home.html
@@ -367,7 +367,6 @@
   <script src="js/widgets/chat-widget.js"></script>
 
   <script src="js/modules/modules-script.js"></script>
-  <script src="js/modules/SalesOrderUI.js"></script>
   <script src="js/modules/PurchaseOrderUI.js"></script>
   <script src="js/modules/PayrollScheduleUI.js"></script>
   <script src="js/modules/HrRequisitionUI.js"></script>
@@ -385,6 +384,8 @@
   <script src="js/modules/submodules/SupplierUI.js"></script>
   <script src="js/modules/submodules/AccountChartUI.js"></script>
   <script src="js/modules/submodules/ExpenseUI.js"></script>
+  <script src="js/modules/submodules/SalesOrderUI.js"></script>
+
   <script src="js/modules/submodules/BankingUI.js"></script>
   <script src="js/modules/submodules/ProductRequestUI.js"></script>
   <script src="js/modules/submodules/RealEstateUI.js"></script>
