--- a/sample.html
+++ b/sample.html
@@ -1,17 +1,32 @@
-public String bankCode;
-public String bankName;
-public String countryCode;
+public String documentType; //can be quote, invoice, forecast
+
+public String customerCode;
+
+public String invoiceNumber; //note, for estimate, forecast and recurring just use the id
+public String contactPerson;
 public String currencyCode;
+public String accountNumber;
 
+public Double totalBeforeDiscount;
+public Double discountPercentage;
+public Double discountAmount;
+public Double freightAmount;
+public Double totalAmount;
+public Double taxAmount;
+public Double overallAmount;
 
-public String bankCode;
-public String bankAccountNumber;
+public LocalDate estimateDate;
+public LocalDate forecastDate;
+public LocalDate invoiceDate;
+public LocalDate paymentDueDate;
 
-public String corporateId;
-public String userId;
-public String password;
+public LocalDate postingDate;
+public LocalDate deliveryDate;
+public String employeeCode;
 
-public LocalDate syncDate;
-public Double bankBalance;
-
-public String memo;
+@Column(length = 250)
+public String summaryText;
+@Column(length = 250)
+public String notes;
+@Column(length = 250)
+public String footer;
